feat: Implemented user rating and review system

--- a/django_app/game/templates/game/story_list.html
+++ b/django_app/game/templates/game/story_list.html
@@ -42,8 +42,8 @@
                 [ X DELETE_SAVE ]
             </a>
             {% else %}
-            <a href="{% url 'play_story' story.id %}">
-                [ EXECUTE_STORY.EXE ]
+            <a href="{% url 'story_detail' story.id %}">
+                [ INSPECT_MODULE ]
             </a>
             {% endif %}
         </div>
