--- a/django_app/game/templates/game/edit_page.html
+++ b/django_app/game/templates/game/edit_page.html
@@ -48,6 +48,14 @@
     </div>
 {% endif %}
 
+<div style="margin-top: 20px;">
+    <label for="illustration_url">SCENE_ILLUSTRATION (STATIC_URL):</label>
+    <input type="url" name="illustration_url" id="illustration_url" 
+           value="{{ page.illustration_url|default:'' }}" 
+           placeholder="https://example.com/image.png" 
+           style="width: 100%; margin-top: 5px;">
+</div>
+
 <div class="separator"></div>
 <a href="{% url 'story_structure' page.story_id %}">&lt;&lt; RETURN_TO_STRUCTURE</a>
 
